# lumina-backend

./: .env.example  .gitignore  LICENSE  README.md  langgraph.json  main.py  pyproject.toml
app/: main.py
app/agents/: __init__.py  news_agent.py
app/agents/rag/: __init__.py  news_rag.py
app/api/internal/: __init__.py  invite_codes.py  users.py
app/api/routes/: auth.py  chat.py  credits.py  examples.py  history.py  news.py  products.py  tasks.py  users.py
app/core/: config.py  constants.py  database.py  deps.py  exceptions.py  logging.py  memory.py  middleware.py  scheduler.py
app/models/: __init__.py  auth.py  chat.py  credit.py  example.py  news.py  user.py
app/repositories/: __init__.py  news_repository.py
app/services/: README.md  __init__.py  auth_service.py  chat_service.py  credit_service.py  email_service.py  example_review_service.py  invite_service.py  news_scraper.py  news_service.py  user_credit_service.py
app/tasks/: __init__.py  example_tasks.py  news_tasks.py
examples/: news_scraper_example.py  news_with_database_example.py
scripts/: __init__.py  adjust_credits.py  backfill_embeddings.py  backfill_news.py  init_db.py  news_with_database.py  test_example_review.py
